parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIFF
    INTERSECT
    STAT
    UNION

Grammar

Rule 0     S' -> defaut
Rule 1     defaut -> assign
Rule 2     defaut -> get
Rule 3     assign -> NAME EQUALS get
Rule 4     get -> GET URL
Rule 5     get -> GET URL contrainte_liee
Rule 6     get -> GET URL contrainte
Rule 7     contrainte_liee -> contrainte_liee AND contrainte
Rule 8     contrainte_liee -> contrainte_liee OR contrainte
Rule 9     contrainte_liee -> contrainte
Rule 10    contrainte -> CONTAINS NAME
Rule 11    contrainte -> EXCLUDES NAME

Terminals, with rules where they appear

AND                  : 7
CONTAINS             : 10
DIFF                 : 
EQUALS               : 3
EXCLUDES             : 11
GET                  : 4 5 6
INTERSECT            : 
NAME                 : 3 10 11
OR                   : 8
STAT                 : 
UNION                : 
URL                  : 4 5 6
error                : 

Nonterminals, with rules where they appear

assign               : 1
contrainte           : 6 7 8 9
contrainte_liee      : 5 7 8
defaut               : 0
get                  : 2 3

Parsing method: LALR

state 0

    (0) S' -> . defaut
    (1) defaut -> . assign
    (2) defaut -> . get
    (3) assign -> . NAME EQUALS get
    (4) get -> . GET URL
    (5) get -> . GET URL contrainte_liee
    (6) get -> . GET URL contrainte

    NAME            shift and go to state 4
    GET             shift and go to state 5

    defaut                         shift and go to state 1
    assign                         shift and go to state 2
    get                            shift and go to state 3

state 1

    (0) S' -> defaut .



state 2

    (1) defaut -> assign .

    $end            reduce using rule 1 (defaut -> assign .)


state 3

    (2) defaut -> get .

    $end            reduce using rule 2 (defaut -> get .)


state 4

    (3) assign -> NAME . EQUALS get

    EQUALS          shift and go to state 6


state 5

    (4) get -> GET . URL
    (5) get -> GET . URL contrainte_liee
    (6) get -> GET . URL contrainte

    URL             shift and go to state 7


state 6

    (3) assign -> NAME EQUALS . get
    (4) get -> . GET URL
    (5) get -> . GET URL contrainte_liee
    (6) get -> . GET URL contrainte

    GET             shift and go to state 5

    get                            shift and go to state 8

state 7

    (4) get -> GET URL .
    (5) get -> GET URL . contrainte_liee
    (6) get -> GET URL . contrainte
    (7) contrainte_liee -> . contrainte_liee AND contrainte
    (8) contrainte_liee -> . contrainte_liee OR contrainte
    (9) contrainte_liee -> . contrainte
    (10) contrainte -> . CONTAINS NAME
    (11) contrainte -> . EXCLUDES NAME

    $end            reduce using rule 4 (get -> GET URL .)
    CONTAINS        shift and go to state 11
    EXCLUDES        shift and go to state 12

    contrainte_liee                shift and go to state 9
    contrainte                     shift and go to state 10

state 8

    (3) assign -> NAME EQUALS get .

    $end            reduce using rule 3 (assign -> NAME EQUALS get .)


state 9

    (5) get -> GET URL contrainte_liee .
    (7) contrainte_liee -> contrainte_liee . AND contrainte
    (8) contrainte_liee -> contrainte_liee . OR contrainte

    $end            reduce using rule 5 (get -> GET URL contrainte_liee .)
    AND             shift and go to state 13
    OR              shift and go to state 14


state 10

    (6) get -> GET URL contrainte .
    (9) contrainte_liee -> contrainte .

  ! reduce/reduce conflict for $end resolved using rule 6 (get -> GET URL contrainte .)
    $end            reduce using rule 6 (get -> GET URL contrainte .)
    AND             reduce using rule 9 (contrainte_liee -> contrainte .)
    OR              reduce using rule 9 (contrainte_liee -> contrainte .)

  ! $end            [ reduce using rule 9 (contrainte_liee -> contrainte .) ]


state 11

    (10) contrainte -> CONTAINS . NAME

    NAME            shift and go to state 15


state 12

    (11) contrainte -> EXCLUDES . NAME

    NAME            shift and go to state 16


state 13

    (7) contrainte_liee -> contrainte_liee AND . contrainte
    (10) contrainte -> . CONTAINS NAME
    (11) contrainte -> . EXCLUDES NAME

    CONTAINS        shift and go to state 11
    EXCLUDES        shift and go to state 12

    contrainte                     shift and go to state 17

state 14

    (8) contrainte_liee -> contrainte_liee OR . contrainte
    (10) contrainte -> . CONTAINS NAME
    (11) contrainte -> . EXCLUDES NAME

    CONTAINS        shift and go to state 11
    EXCLUDES        shift and go to state 12

    contrainte                     shift and go to state 18

state 15

    (10) contrainte -> CONTAINS NAME .

    $end            reduce using rule 10 (contrainte -> CONTAINS NAME .)
    AND             reduce using rule 10 (contrainte -> CONTAINS NAME .)
    OR              reduce using rule 10 (contrainte -> CONTAINS NAME .)


state 16

    (11) contrainte -> EXCLUDES NAME .

    $end            reduce using rule 11 (contrainte -> EXCLUDES NAME .)
    AND             reduce using rule 11 (contrainte -> EXCLUDES NAME .)
    OR              reduce using rule 11 (contrainte -> EXCLUDES NAME .)


state 17

    (7) contrainte_liee -> contrainte_liee AND contrainte .

    AND             reduce using rule 7 (contrainte_liee -> contrainte_liee AND contrainte .)
    OR              reduce using rule 7 (contrainte_liee -> contrainte_liee AND contrainte .)
    $end            reduce using rule 7 (contrainte_liee -> contrainte_liee AND contrainte .)


state 18

    (8) contrainte_liee -> contrainte_liee OR contrainte .

    AND             reduce using rule 8 (contrainte_liee -> contrainte_liee OR contrainte .)
    OR              reduce using rule 8 (contrainte_liee -> contrainte_liee OR contrainte .)
    $end            reduce using rule 8 (contrainte_liee -> contrainte_liee OR contrainte .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: reduce/reduce conflict in state 10 resolved using rule (get -> GET URL contrainte)
WARNING: rejected rule (contrainte_liee -> contrainte) in state 10
